[package]
name = "product-crossref"
version = "0.1.0"
edition = "2021"

[dependencies]
abc-uiautomation = { version = "1.0.0", path = "../abc-uiautomation" }
chrono = "0.4.42"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
ean13 = { git = "https://github.com/areif-dev/ean13", version = "0.4.0" }
rust_decimal = { version = "1.38.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
